# hse-mlops-hw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: infer.yaml  train.yaml
data/: test.csv.dvc  train.csv.dvc
mlops/: model.py
price_predictions/: dvc.py  predict.py  prepare.py
tests/: __init__.py
